tests/paczka1/fuzzy1/80514060.err
Error in line 3: IX3Gdfmy A281 32,6
Error in line 9: bT9 S0 17,7
Error in line 13: sYGfTtvmSk S0 48,1
Error in line 14: bT9 S0 62,5
Error in line 16: xjqEohXQ S0 92,57
Error in line 17: sYGfTtvmSk S0 34,6
Error in line 11: Kq6EBhKDjd A281 9,4
Error in line 25: Kq6EBhKDjd S0 55,6
Error in line 26: Kq6EBhKDjd S0 274,7
Error in line 28: xjqEohXQ S0 90,7
Error in line 29: S0 A281 99,9
Error in line 22: Kq6EBhKDjd A798 58,8
Error in line 32: Kq6EBhKDjd AR81 5,8
Error in line 33: xjqEohXQ S0 81,6
Error in line 36: ?S0
